Fix z-index issue in modal and adjust h1 size

--- a/src/blocks/modal/_bu-blocks-block-modal-base.scss
+++ b/src/blocks/modal/_bu-blocks-block-modal-base.scss
@@ -138,17 +138,13 @@
 			}
 		}
 	}
-
-	h1,
-	p {
-		color: $color-grayscale-0;
-	}
 }
 
 
 .wp-block-editorial-modal-callout-content {
-	//z-index: 1000;
+	z-index: 1000;
 	padding: 40px;
+	position: relative;
 
 	@include breakpoint( $sm ) {
 		padding: 80px;
@@ -157,6 +153,19 @@
 	.button,
 	p:last-of-type {
 		margin-bottom: 0;
+	}
+
+	h1 {
+		font-size: 1.75em;
+
+		@include breakpoint( $sm ) {
+			font-size: 2.2em;
+		}
+	}
+
+	h1,
+	p {
+		color: $color-grayscale-0;
 	}
 }
 
